Add stylish code snippet to About section

--- a/index.html
+++ b/index.html
@@ -213,8 +213,21 @@
           </div>
         </div>
         <div class="about-image">
-          <div class="about-img-container">
-            <i class="fas fa-code"></i>
+          <div class="about-img-container code-snippet">
+            <div class="code-header">
+              <span class="circle red"></span>
+              <span class="circle yellow"></span>
+              <span class="circle green"></span>
+            </div>
+            <div class="code-content">
+              <pre><code><span class="keyword">const</span> developer = {
+  name: <span class="string">'Yousif M Rabea'</span>,
+  skills: [<span class="string">'C++'</span>, <span class="string">'Python'</span>, <span class="string">'JavaScript'</span>],
+  passion: <span class="string">'Clean Code'</span>
+};
+
+<span class="comment">// Let's build something amazing!</span></code></pre>
+            </div>
           </div>
         </div>
       </div>
