--- a/assets/Yousif-Resume.pdf.html
+++ b/assets/Yousif-Resume.pdf.html
@@ -239,11 +239,11 @@
         </div>
         <div class="contact-item">
           <i class="fas fa-phone"></i>
-          <span>+1 (123) 456-7890</span>
+          <span>+20 01158712059</span>
         </div>
         <div class="contact-item">
           <i class="fas fa-map-marker-alt"></i>
-          <span>Boston, MA</span>
+          <span>Egypt, Giza</span>
         </div>
         <div class="contact-item">
           <i class="fab fa-linkedin"></i>
